# Object-detection-in-Point-Cloud-pole

./: CMakeLists.txt  README.md
pointclouds/: 3m.pcd  no_plane.pcd  op.pcd  op_1.pcd  op_1n.pcd  pole.ply  pole1.pcd  pole2.pcd  pole3.pcd  pole4.pcd  pole4.ply  pole5.pcd  pole5.ply  pole6.pcd  pole6.ply  pole7.pcd  pole7.ply  pole8.pcd  pole8.ply  polec.pcd  test.pcd
src/: coordinate_transformations.py  crop.cpp  generate_pc.cpp  icp.py  registration.py  resampling.cpp
